<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/register"
    android:orientation="vertical">

  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:layout_marginTop="10dp"
      android:text="@string/register_account"
      android:textColor="@color/black"
      android:textSize="20sp" />

  <View
      android:layout_width="400dp"
      android:layout_height="1dp"
      android:background="#ACA1A1"
      android:layout_gravity="center"
      android:layout_marginTop="2dp"
      android:layout_marginBottom="10dp"
      />

  <TableLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="5dp"
      android:stretchColumns="*"
      android:background="@color/white">
    <TableRow android:layout_marginBottom="5dp">
      <TextView
          android:layout_height="match_parent"
          android:layout_width="0dp"
          android:text="@string/fullname"
          android:textColor="@color/black"
          android:padding="8dp"
          android:textSize="17sp"
          android:layout_weight="1"
          android:labelFor="@id/edtFullname"
          android:paddingHorizontal="10dp"/>
      <EditText
          android:id="@+id/edtFullname"
          android:layout_width="0dp"
          android:layout_height="48dp"
          android:layout_weight="3"
          android:textSize="20sp"
          android:layout_marginStart="0dp"
          android:inputType="text"
          android:autofillHints="email"
          android:maxWidth="488dp"
          android:paddingHorizontal="10dp"/>
    </TableRow>
    <TableRow android:layout_marginBottom="5dp">
      <TextView
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_weight="1"
          android:labelFor="@id/edtEmail"
          android:paddingHorizontal="8dp"
          android:paddingTop="8dp"
          android:text="@string/email"
          android:textColor="@color/black"
          android:textSize="16sp" />
      <EditText
          android:id="@+id/edtEmail"
          android:layout_width="0dp"
          android:layout_height="48dp"
          android:layout_weight="3"
          android:textSize="20sp"
          android:layout_marginStart="0dp"
          android:inputType="textEmailAddress"
          android:autofillHints="username"
          android:maxWidth="488dp"
          android:paddingHorizontal="10dp"/>
    </TableRow>

    <TableRow android:layout_marginBottom="5dp">
      <TextView
          android:layout_height="match_parent"
          android:layout_width="0dp"
          android:text="@string/phone"
          android:textColor="@color/black"
          android:padding="8dp"
          android:textSize="17sp"
          android:layout_weight="1"
          android:labelFor="@+id/edtPhoneNumber"/>
      <EditText
          android:id="@+id/edtPhoneNumber"
          android:layout_width="0dp"
          android:layout_height="48dp"
          android:layout_weight="3"
          android:textSize="20sp"
          android:layout_marginStart="0dp"
          android:inputType="phone"
          android:autofillHints="phone"
          android:maxWidth="488dp"
          android:paddingHorizontal="10dp"/>
    </TableRow>
    <TableRow android:layout_marginBottom="5dp">
      <TextView
          android:layout_height="match_parent"
          android:layout_width="0dp"
          android:text="@string/password"
          android:textColor="@color/black"
          android:padding="8dp"
          android:textSize="17sp"
          android:layout_weight="1"
          android:labelFor="@id/edtPassword"/>
      <EditText
          android:id="@+id/edtPassword"
          android:layout_width="0dp"
          android:layout_height="48dp"
          android:layout_weight="3"
          android:textSize="20sp"
          android:layout_marginStart="0dp"
          android:inputType="textPassword"
          android:autofillHints="password"
          android:maxWidth="488dp"
          android:paddingHorizontal="10dp"/>
    </TableRow>
    <TableRow android:layout_marginBottom="5dp">
      <TextView
          android:layout_height="match_parent"
          android:layout_width="0dp"
          android:text="@string/confirm_password"
          android:textColor="@color/black"
          android:paddingHorizontal="8dp"
          android:paddingTop="8dp"
          android:textSize="14sp"
          android:layout_weight="1"
          android:labelFor="@+id/edtConfirmPassword"/>
      <EditText
          android:id="@+id/edtConfirmPassword"
          android:layout_width="0dp"
          android:layout_height="48dp"
          android:layout_weight="3"
          android:textSize="20sp"
          android:layout_marginStart="0dp"
          android:inputType="textPassword"
          android:autofillHints="password"
          android:maxWidth="488dp"
          android:paddingHorizontal="10dp"/>
    </TableRow>
  </TableLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:layout_marginTop="5dp"
      style="?android:attr/buttonBarStyle">

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginTop="10dp"
        android:background="@color/red"
        android:text="@string/register"
        android:textColor="#F5FBF6"
        android:layout_marginStart="10dp"
        style="?android:attr/buttonBarStyle"
        android:maxWidth="320dp"
        />

    <Button
        android:id="@+id/btnReset"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/reset"
        android:textColor="#F5FBF6"
        android:background="@color/red"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:maxWidth="320dp"
        style="?android:attr/buttonBarStyle"/>
  </LinearLayout>
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:layout_marginTop="5dp"
      android:layout_gravity="center"
      android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Bạn đã có tài khoản?"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@color/black"
        android:background="@color/transparent" />
  </LinearLayout>


</LinearLayout>
