<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingVertical="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/confirm_info_booking"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="300dp">
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@color/white"
            android:stretchColumns="*">

            <TableRow android:layout_marginBottom="5dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="8dp"
                    android:text="@string/tv_name_film"
                    android:textColor="@color/black"
                    android:textSize="17sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:padding="8dp"
                    android:text="Venom"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </TableRow>

            <TableRow android:layout_marginBottom="5dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="8dp"
                    android:text="@string/tv_premiere"
                    android:textColor="@color/black"
                    android:textSize="17sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:padding="8dp"
                    android:text="4-7-2024"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </TableRow>

            <TableRow android:layout_marginBottom="5dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="8dp"
                    android:text="@string/tv_cinema"
                    android:textColor="@color/black"
                    android:textSize="17sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:padding="8dp"
                    android:text="9AM - 10AM"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </TableRow>

            <TableRow android:layout_marginBottom="5dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="8dp"
                    android:text="@string/tv_price_ticket"
                    android:textColor="@color/black"
                    android:textSize="17sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:padding="8dp"
                    android:text="100.000 VNĐ"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </TableRow>

            <TableRow android:layout_marginBottom="5dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="8dp"
                    android:text="@string/tv_quantity"
                    android:textColor="@color/black"
                    android:textSize="17sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:padding="8dp"
                    android:text="3"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </TableRow>

            <TableRow android:layout_marginBottom="5dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="8dp"
                    android:text="@string/tv_selected_chair"
                    android:textColor="@color/black"
                    android:textSize="17sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:padding="8dp"
                    android:text="1, 2, 3"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </TableRow>

            <TableRow android:layout_marginBottom="5dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="8dp"
                    android:text="@string/tv_food"
                    android:textColor="@color/black"
                    android:textSize="17sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:padding="8dp"
                    android:text="Coca cola (15.000 VNĐ) x 2, \nBỏng ngô Caramel (50.000 VNĐ) x 4"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </TableRow>

            <TableRow android:layout_marginBottom="5dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="8dp"
                    android:text="@string/tv_payment"
                    android:textColor="@color/black"
                    android:textSize="17sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:padding="8dp"
                    android:text="Tiền mặt"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow android:layout_marginBottom="5dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="8dp"
                    android:text="@string/tv_total"
                    android:textColor="@color/black"
                    android:textSize="17sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:padding="8dp"
                    android:text="315.000 VNĐ"
                    android:textColor="@color/red"
                    android:textSize="22sp"
                    android:textStyle="bold" />
            </TableRow>
        </TableLayout>
    </ScrollView>


    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnAgree"
            style="?android:attr/buttonBarStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="#B71C1C"
            android:maxWidth="320dp"
            android:text="@string/agree"
            android:textColor="#F5FBF6" />

        <Button
            android:id="@+id/btnCancel"
            style="?android:attr/buttonBarStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="#B71C1C"
            android:maxWidth="320dp"
            android:text="@string/reset"
            android:textColor="#F5FBF6" />
    </LinearLayout>

</LinearLayout>