<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingVertical="10dp">
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="#CCCCCC"
        android:stretchColumns="*">
        <TableRow android:layout_marginBottom="5dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="8dp"
                android:text="@string/tv_id_bill"
                android:textColor="@color/black"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/tv_id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:padding="8dp"
                android:text="123123123"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

        </TableRow>

        <TableRow android:layout_marginBottom="5dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="8dp"
                android:text="@string/tv_name_film"
                android:textColor="@color/black"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:padding="8dp"
                android:text="Venom"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

        </TableRow>

        <TableRow android:layout_marginBottom="5dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="8dp"
                android:text="@string/tv_premiere"
                android:textColor="@color/black"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/tv_premiere"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:padding="8dp"
                android:text="4-7-2024"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

        </TableRow>

        <TableRow android:layout_marginBottom="5dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="8dp"
                android:text="@string/tv_date_order"
                android:textColor="@color/black"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/tv_date_order"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:padding="8dp"
                android:text="01/01/1111"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

        </TableRow>
        <TableRow android:layout_marginBottom="5dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="8dp"
                android:text="@string/tv_time_order"
                android:textColor="@color/black"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/tv_time_order"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:padding="8dp"
                android:text="9AM - 10AM"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

        </TableRow>

        <TableRow android:layout_marginBottom="5dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="8dp"
                android:text="@string/tv_price_ticket"
                android:textColor="@color/black"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/tv_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:padding="8dp"
                android:text="100.000 VNĐ"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

        </TableRow>

        <TableRow android:layout_marginBottom="5dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="8dp"
                android:text="@string/tv_quantity"
                android:textColor="@color/black"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/tv_quantity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:padding="8dp"
                android:text="3"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

        </TableRow>

        <TableRow android:layout_marginBottom="5dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="8dp"
                android:text="@string/tv_selected_chair"
                android:textColor="@color/black"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/tv_selected_chair"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:padding="8dp"
                android:text="1, 2, 3"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

        </TableRow>

        <TableRow android:layout_marginBottom="5dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="8dp"
                android:text="@string/tv_food"
                android:textColor="@color/black"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/tv_selected_food"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:padding="8dp"
                android:text="Coca cola (15.000 VNĐ) x 2, \nBỏng ngô Caramel (50.000 VNĐ) x 4"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

        </TableRow>

        <TableRow android:layout_marginBottom="5dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="8dp"
                android:text="@string/tv_payment"
                android:textColor="@color/black"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/tv_method_payment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:padding="8dp"
                android:text="Tiền mặt"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow android:layout_marginBottom="5dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="8dp"
                android:text="@string/tv_total"
                android:textColor="@color/black"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/tv_total_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:padding="8dp"
                android:text="315.000 VNĐ"
                android:textColor="@color/red"
                android:textSize="22sp"
                android:textStyle="bold" />
        </TableRow>
    </TableLayout>
</LinearLayout>